first draft done, add responsive design. To fix alignment and hover effect.

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -62,12 +62,17 @@ button{
     color: $primary-white;
     font-size: 0.625rem;
     line-height: 1.25rem;
-    background: $primary-black;
+    background-color: $primary-black;
     max-height: 2rem;
     font-weight: 700;
     font-family: 'Avenir', sans-serif;
     min-width: 9.375rem;
     border-radius: 0.25rem;
+
+    &:hover{
+        background: $secondary-black;
+    }
+
     @include tablet{
         font-size: 0.75rem;
         line-height: 1.25rem;
@@ -78,6 +83,8 @@ button{
 label{
     font-size: 0.625rem;
     line-height: 1.25rem;
+    font-weight: 600;
+    color: $primary-silver;
     text-transform: capitalize;
     @include tablet{
         font-size: 0.75rem;
