--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -2,6 +2,9 @@
 @use './partials/variables' as *;
 @use './partials/global' as *;
 
+*{
+    box-sizing: border-box;
+}
 
 body{
     height: 100%;
@@ -91,12 +94,13 @@ body{
 }
 
 .hero{
-    background: url(../asset/images/Photo-gallery-3.jpg);
+    background: url(../asset/images/hero-shows.jpg);
     background-size: cover;
     position: relative;
-    height: 40vh;
+    height: 50vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     margin-top: 0;
     overflow: hidden;
@@ -113,6 +117,15 @@ body{
         z-index: 1;
     }
 
+    @include tablet{
+        height: 55vh;
+    }
+
+    @include desktop{
+        flex-direction: row;
+        height: 65vh;
+    }
+
 
     &__text{
         padding-left: 1rem;
@@ -121,13 +134,87 @@ body{
 
         &--detail{
             width: 60%;
+            padding-top: 0;
+
+            @include tablet{
+                width: 75%;
+            }
         }
 
+    }
+
+    &__song{
+        position: relative;
+        z-index: 3;
+        width: 80%;
+        height: auto;
+
+        @include tablet{
+            width: 50%;
+            align-self: flex-start;
+            margin: 1rem;
+        }
+
+        @include desktop{
+            width: 30%;
+            align-self: center;
+            margin: 1rem;
+        }
     }
 }
 
 .shows{
-    
+    width: 100%;
+
+    &__container{
+        width: 100%;
+        position: relative;
+    }
+
+    &__card{
+        width: 100%;
+        border-bottom: 0.0625rem solid $secondary-silver;
+
+        &:hover{
+            background-color: $secondary-silver;
+        }
+
+        @include tablet{
+            display: flex;
+            flex-direction: row;
+        }
+    }
+
+    &__subtitle{
+        font-weight: 600;
+        color: $primary-silver;
+    }
+
+    &__sub-container{
+        margin: 1rem 0;
+        @include tablet{
+            width: 100%;
+        }
+    }
+
+    &__date{
+        font-weight: 600;
+    }
+
+    button{
+        width: 100%;
+        font-size: 0.9rem;
+        font-weight: 600;
+        height: 2rem;
+        margin-bottom: 1rem;
+        z-index: 3;
+
+        @include tablet{
+            width: 20%;
+            align-self: center;
+            justify-self: flex-end;
+        }
+    }
 }
 
 .footer{
